--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,9 @@ body {
     margin-left:auto;
     margin-right:auto;
 }
+header,footer{
+    clear:both;
+}
 div img {
     width: 100% ;
 }
@@ -77,6 +80,11 @@ footer li {
 }
 footer p{
     padding: 10px;
+}
+section div.subsection{
+    width:460px;
+    margin: 24px 10px;
+    float:left;
 }
 /*Class based display */
 
