--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,25 +5,15 @@
 
 /* Redefine existing HTML styles */
 body {
-    font-family: sans-serif;
-    font-size: smaller;
+    font: smaller/160% sans-serif;
     color: #999999;
-    width: 960px;
-    margin-left:auto;
-    margin-right:auto;
+   margin: 0 auto;
 }
 header,footer{
     clear:both;
 }
-div img {
-    width: 100% ;
-}
 
-a{
-    color: #999999;
-    text-decoration: none;
-}
-a:link{
+/*a:link{
 
 }
 a:visited{
@@ -34,7 +24,8 @@ a:active{
 }
 a:hover{
     color: #FF0000;
-}
+}*/
+
 nav ul{
     text-align:center;
     list-style:none;
@@ -43,13 +34,19 @@ nav ul{
     margin: 24px 0;
 }
 nav li {
-    width:140px;
+    width:46%;
     float: left;
-    margin: 0 10px;
+    margin: 0 2%;
     /*text-align: center;
     margin-right: 10px;
     margin-left: 10px;
     */
+}
+div img {
+    width: 100% ;
+}
+h1{
+    padding: 24px 10px;
 }
 nav a {
     text-decoration:none;
@@ -65,27 +62,47 @@ nav a:hover {
     background-color: #3a9897;
     color: #333333;
 }
-footer ul {
+/*footer ul {
     list-style:none;
     padding-left: 0;
     padding-right: 0;
-
-}
+}*/
 footer li {
-    width: 460px;
+    width: 46%;
     /*float: left;
     */
-    margin: 0 10px;
-
+    /*margin: 0 10px;
+*/
 }
 footer p{
     padding: 10px;
 }
-section div.subsection{
-    width:460px;
-    margin: 24px 10px;
+section .subsection{
+    width:96%;
+    margin: 24px 2%;
     float:left;
 }
+/*Medium Screens */
+@media(min-width:768px){
+    nav li{
+        width:12.66%;
+    }
+footer li {
+        width:46%;
+}
+/*Large Screens*/
+@media(min-width: 940px){
+    body{
+        max-width:960px;
+    }
+    section .subsection{
+        width:46%
+    }
+}
+
+}
+
+
 /*Class based display */
 
 
